# 3DHandPose

./: README.md
device/: README.md  server.py
device/android/: .gitignore  settings.gradle
device/android/CapImage/: CMakeLists.txt  build.gradle
device/android/CapImage/src/main/: AndroidManifest.xml
device/android/CapImage/src/main/c/: cap_image_sec_tsp.c  cap_image_syn_rmi.c  java_cap_image.c  log.h  native_touch.h  read_cap.h  read_touch.c  read_touch.h  syn_rmi.c  syn_rmi.h  sys_util.c  sys_util.h
device/android/CapImage/src/main/java/com/figlab/capimage/: CapImage.java  CapImageServer.java  CapImageStreamer.java  CapacitiveImage.java  NativeTouch.java  TouchDetector.java  TouchTracker.java
device/android/HandIK/: build.gradle
kinect/: README.md  sanity_check.ipynb  viewer.py
server/: .eslintrc.js  .gitignore  .prettierignore  README.md  app.ts  compute_server.py  hand_ik.py  hand_ik_blender.py  hand_ik_flask.py  package-lock.json  package.json  start.sh  tsconfig.json  webpack.config.js
server/css/: app.css
server/res/: convert_matrix.py  hand.glb
server/res/ik-targets/: a-1.json  a-2.json  a-3.json  a-4.json  a-p-1.json  a-p-2.json  a-p-3.json  a-p-4.json  a-p-5.json  a-p-6.json  a-p-7.json  b-1.json  b-2.json  b-p-1.json  b-p-2.json  b-p-4.json  c-1.json  c-2.json  c-3.json  c-p-1.json  c-p-10.json  c-p-2.json  c-p-3.json  c-p-4.json  c-p-5.json  c-p-6.json  c-p-7.json  c-p-8.json  c-p-9.json  d-1.json  d-2.json  d-3.json  d-4.json  d-5.json  d-6.json  d-7.json  d-8.json  d-9.json  d-p-1.json  e-1.json  (+88 more)
server/res/prompt-descriptions/: Generate.ipynb  a-p.txt  a.txt  all.txt  b-p.txt  b.txt  c-p.txt  c.txt  d.txt  e.txt  f-p.txt  f.txt  g-p.txt  g.txt  h-p.txt  h.txt  i-p.txt  i.txt  j-p.txt  j.txt  k-p.txt  k.txt  l-p.txt  l.txt  m-p.txt  m.txt  n.txt  o.txt  p.txt  q.txt  r.txt
server/res/sample-data/: a-1.json  a-2.json  a-3.json  a-4.json  a-p-1.json  a-p-2.json  a-p-4.json  a-p-5.json  a-p-6.json  a-p-7.json  b-1.json  b-2.json  b-p-1.json  b-p-2.json  b-p-3.json  b-p-4.json  c-1.json  c-2.json  c-3.json  c-p-1.json  c-p-10.json  c-p-2.json  c-p-3.json  c-p-5.json  c-p-6.json  c-p-7.json  c-p-8.json  c-p-9.json  d-6.json  d-7.json  d-8.json  d-9.json  d-p-1.json  desktop.ini  e-1.json  e-2.json  e-3.json  e-4.json  e-5.json  e-6.json  (+83 more)
server/res/test-input/: claw.json  fingers-1.json  pinch-1.json  (+2 more)
server/views/: index.html  react.ejs
(+71 files in other folders)
